# bioinf_utils

./: .gitignore  pyproject.toml
src/: cache.py  gts.py  subprocess.py
src/bioinf_utils/: blast.py  cache.py  distances.py  dists_genet.py  fastp.py  generate_seqs.py  ncbi.py  normalization.py  pca.py  plink.py  plot.py  seqs.py  sk_allel.py  snpeff.py  variant.py  vcf.py
tests/: test_fastp.py  test_seq_generation.py  test_utils.py
