[project]
name = "bioinf_utils"
version = '0.1'

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-allel",
    "h5py",
    "scipy",
    "scikit-learn",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

